# Brain-Tumor-Segmentation

./: .gitignore  LICENSE  README.md  predict.py  pyproject.toml  requirements.txt  run.py  train.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
configs/: cpu.json  gpu_16gb.json  gpu_8gb.json  hypertune.json
data/: README.md
docs/: clinical_context.md  ml_design_decisions.md
notebooks/: 01_load_visualize_medical_images.ipynb  02_preprocessing_pipeline.ipynb  03_tumor_segmentation_unet.ipynb
scripts/: generate_sample_data.py  predict.py  predict3d.py  test_model.py  train.py  train3d.py
src/: __init__.py
src/preprocessing/: __init__.py  brain_tumor_loader.py  dicom_loader.py  nifti_loader.py  transforms.py
src/segmentation/: __init__.py  losses.py  losses_advanced.py  unet.py  unet3d.py
src/visualization/: __init__.py  viewer.py  visualizer3d.py
